--- a/deno.json
+++ b/deno.json
@@ -1,1 +1,6 @@
-{}
+{
+    "tasks": {
+        "server": "deno run --allow-net server.ts",
+        "sunbeam": "ENDPOINT=http://localhost:8000 sunbeam run ."
+    }
+}
